enumcapsulate/tests/derive-tests/variant_downcast/fail/enum/struct_variants.err.txt
error: proc-macro derive panicked
 --> /tests/derive-tests/variant_downcast/fail/enum/struct_variants.rs:5:10
  |
5 | #[derive(AsVariant)]
  |          ^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with tuple variants can use this derive")
